[metadata]
name = osjenkins-twitter
version = 1
summary = OSJenkins Twitter bot
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/osjenkins-twitter
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = osjktw

[pbr]
warnerrors = true
